CONCF-186 | Fix positioning of contribute and share menu on smallest breakpoint

--- a/skins/oasis/css/core/breakpoints-layout.scss
+++ b/skins/oasis/css/core/breakpoints-layout.scss
@@ -60,7 +60,7 @@
 			}
 
 			.buttons {
-				top: 87px;
+				top: 57px;
 			}
 		}
 
